// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > admin-command-options 1`] = `
[
  {
    "description": "Check bot responsiveness and latency",
    "description_localizations": undefined,
    "name": "ping",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Trigger bidirectional database synchronization",
    "description_localizations": undefined,
    "name": "db-sync",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Preview changes without applying them",
        "description_localizations": undefined,
        "name": "dry-run",
        "name_localizations": undefined,
        "required": false,
        "type": 5,
      },
      {
        "description": "Proceed despite a migration-soak version mismatch (skew is logged)",
        "description_localizations": undefined,
        "name": "allow-schema-skew",
        "name_localizations": undefined,
        "required": false,
        "type": 5,
      },
    ],
    "type": 1,
  },
  {
    "description": "List all servers the bot is in",
    "description_localizations": undefined,
    "name": "servers",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Remove the bot from a server",
    "description_localizations": undefined,
    "name": "kick",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Discord server to leave",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "server-id",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "View API usage statistics",
    "description_localizations": undefined,
    "name": "usage",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "Last 24 hours",
            "name_localizations": undefined,
            "value": "24h",
          },
          {
            "name": "Last 7 days",
            "name_localizations": undefined,
            "value": "7d",
          },
          {
            "name": "Last 30 days",
            "name_localizations": undefined,
            "value": "30d",
          },
        ],
        "description": "Time period for stats",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "period",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "DM every opted-in user through the release-notes pipeline",
    "description_localizations": undefined,
    "name": "broadcast",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "The DM body (opt-out footer is appended automatically)",
        "description_localizations": undefined,
        "max_length": 1800,
        "min_length": undefined,
        "name": "message",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "Major — everyone opted in",
            "name_localizations": undefined,
            "value": "major",
          },
          {
            "name": "Minor — users at minor or patch threshold",
            "name_localizations": undefined,
            "value": "minor",
          },
          {
            "name": "Patch — only users opted into everything",
            "name_localizations": undefined,
            "value": "patch",
          },
        ],
        "description": "Message importance — major reaches everyone opted in (default)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "level",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Unique version label (default: timestamped adhoc-…)",
        "description_localizations": undefined,
        "max_length": 50,
        "min_length": undefined,
        "name": "label",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "description": "Preview the audience without sending (default: false)",
        "description_localizations": undefined,
        "name": "dry-run",
        "name_localizations": undefined,
        "required": false,
        "type": 5,
      },
      {
        "description": "Required true for a REAL send (no undo)",
        "description_localizations": undefined,
        "name": "confirm",
        "name_localizations": undefined,
        "required": false,
        "type": 5,
      },
    ],
    "type": 1,
  },
  {
    "description": "Clean up old conversation history and tombstones",
    "description_localizations": undefined,
    "name": "cleanup",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Keep history from the last N days (default: 30)",
        "description_localizations": undefined,
        "max_value": 365,
        "min_value": 1,
        "name": "days",
        "name_localizations": undefined,
        "required": false,
        "type": 4,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "All (history + tombstones)",
            "name_localizations": undefined,
            "value": "all",
          },
          {
            "name": "History only",
            "name_localizations": undefined,
            "value": "history",
          },
          {
            "name": "Tombstones only",
            "name_localizations": undefined,
            "value": "tombstones",
          },
        ],
        "description": "What to clean up (default: all)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "target",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Global settings (dashboard + direct setter)",
    "description_localizations": undefined,
    "name": "settings",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Open global settings dashboard",
        "description_localizations": undefined,
        "name": "edit",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
      {
        "description": "Set a system setting directly",
        "description_localizations": undefined,
        "name": "set",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "Which setting to change",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "setting",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The new value (validated against the model catalogs)",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "value",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
    ],
    "type": 2,
  },
  {
    "description": "Check bot health and connected services",
    "description_localizations": undefined,
    "name": "health",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "View gateway queue depth, dedup cache size, and uptime",
    "description_localizations": undefined,
    "name": "metrics",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Set or view the bot presence (activity status)",
    "description_localizations": undefined,
    "name": "presence",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "Custom Status",
            "name_localizations": undefined,
            "value": 4,
          },
          {
            "name": "Playing",
            "name_localizations": undefined,
            "value": 0,
          },
          {
            "name": "Listening to",
            "name_localizations": undefined,
            "value": 2,
          },
          {
            "name": "Watching",
            "name_localizations": undefined,
            "value": 3,
          },
          {
            "name": "Competing in",
            "name_localizations": undefined,
            "value": 5,
          },
          {
            "name": "None (clear)",
            "name_localizations": undefined,
            "value": 99,
          },
        ],
        "description": "Activity type",
        "description_localizations": undefined,
        "max_value": undefined,
        "min_value": undefined,
        "name": "type",
        "name_localizations": undefined,
        "required": false,
        "type": 4,
      },
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Activity text (e.g., "with fire")",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "text",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > channel-command-options 1`] = `
[
  {
    "description": "Activate a character to auto-respond in this channel",
    "description_localizations": undefined,
    "name": "activate",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The character to activate",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Deactivate the character from this channel",
    "description_localizations": undefined,
    "name": "deactivate",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Browse activated channels",
    "description_localizations": undefined,
    "name": "browse",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Search by character name",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "query",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "This Server",
            "name_localizations": undefined,
            "value": "current",
          },
          {
            "name": "All Servers (Owner only)",
            "name_localizations": undefined,
            "value": "all",
          },
        ],
        "description": "Filter channels by scope",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "filter",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Open extended context settings dashboard for this channel",
    "description_localizations": undefined,
    "name": "settings",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > character-command-options 1`] = `
[
  {
    "description": "Create a new AI character",
    "description_localizations": undefined,
    "name": "create",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Edit an existing AI character",
    "description_localizations": undefined,
    "name": "edit",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Character to edit",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "View character details",
    "description_localizations": undefined,
    "name": "view",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Character to view",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Manage @mention aliases (personal for you, global for everyone)",
    "description_localizations": undefined,
    "name": "alias",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Browse aliases — yours everywhere, or one character",
        "description_localizations": undefined,
        "name": "browse",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "Character to inspect (omit to see all your aliases)",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": false,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Add an alias to a character you can see",
        "description_localizations": undefined,
        "name": "add",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "Character the alias points to",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": undefined,
            "choices": undefined,
            "description": "The alias text (resolves @mentions like the name)",
            "description_localizations": undefined,
            "max_length": 100,
            "min_length": undefined,
            "name": "alias",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "Personal (just you)",
                "name_localizations": undefined,
                "value": "user",
              },
              {
                "name": "Global (everyone)",
                "name_localizations": undefined,
                "value": "global",
              },
            ],
            "description": "Who the alias resolves for (Global is bot-owner only)",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "scope",
            "name_localizations": undefined,
            "required": false,
            "type": 3,
          },
        ],
        "type": 1,
      },
    ],
    "type": 2,
  },
  {
    "description": "Browse and search characters",
    "description_localizations": undefined,
    "name": "browse",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Search by name or description",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "query",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "All Characters",
            "name_localizations": undefined,
            "value": "all",
          },
          {
            "name": "My Characters",
            "name_localizations": undefined,
            "value": "mine",
          },
          {
            "name": "Public Only",
            "name_localizations": undefined,
            "value": "public",
          },
        ],
        "description": "Filter characters by type",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "filter",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Upload or replace a character avatar",
    "description_localizations": undefined,
    "name": "avatar",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Character to update",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "description": "Avatar image (PNG, JPG, GIF, WebP)",
        "description_localizations": undefined,
        "name": "image",
        "name_localizations": undefined,
        "required": true,
        "type": 11,
      },
    ],
    "type": 1,
  },
  {
    "description": "Remove a character's avatar image",
    "description_localizations": undefined,
    "name": "avatar-clear",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Character to update",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Upload or replace a character voice reference for TTS cloning",
    "description_localizations": undefined,
    "name": "voice",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Character to update",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "description": "Voice reference audio (WAV, MP3, OGG, FLAC)",
        "description_localizations": undefined,
        "name": "audio",
        "name_localizations": undefined,
        "required": true,
        "type": 11,
      },
    ],
    "type": 1,
  },
  {
    "description": "Remove a character voice reference and disable TTS",
    "description_localizations": undefined,
    "name": "voice-clear",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Character to update",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Import a character from JSON file",
    "description_localizations": undefined,
    "name": "import",
    "name_localizations": undefined,
    "options": [
      {
        "description": "JSON file containing character data",
        "description_localizations": undefined,
        "name": "file",
        "name_localizations": undefined,
        "required": true,
        "type": 11,
      },
      {
        "description": "Avatar image (PNG, JPG, GIF, WebP)",
        "description_localizations": undefined,
        "name": "image",
        "name_localizations": undefined,
        "required": false,
        "type": 11,
      },
      {
        "description": "Voice reference audio (WAV, MP3, OGG, FLAC)",
        "description_localizations": undefined,
        "name": "audio",
        "name_localizations": undefined,
        "required": false,
        "type": 11,
      },
    ],
    "type": 1,
  },
  {
    "description": "Export a character as JSON file",
    "description_localizations": undefined,
    "name": "export",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Character to export",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Show the JSON template for character import",
    "description_localizations": undefined,
    "name": "template",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Chat one-on-one with a character",
    "description_localizations": undefined,
    "name": "chat",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Character to chat with",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Message to send to the character",
        "description_localizations": undefined,
        "max_length": 2000,
        "min_length": undefined,
        "name": "message",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Chat with a random character — or, with no message, have them read the room",
    "description_localizations": undefined,
    "name": "random",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Message to send (leave empty to have the random pick react to recent chat)",
        "description_localizations": undefined,
        "max_length": 2000,
        "min_length": undefined,
        "name": "message",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "description": "Hide your persona & memories. Defaults on with no message, off when you send one.",
        "description_localizations": undefined,
        "name": "incognito",
        "name_localizations": undefined,
        "required": false,
        "type": 5,
      },
      {
        "description": "Only consider public characters (skip your private ones)",
        "description_localizations": undefined,
        "name": "exclude-private",
        "name_localizations": undefined,
        "required": false,
        "type": 5,
      },
      {
        "description": "Only consider characters you own (composable with exclude-private)",
        "description_localizations": undefined,
        "name": "only-mine",
        "name_localizations": undefined,
        "required": false,
        "type": 5,
      },
    ],
    "type": 1,
  },
  {
    "description": "Have a character chime in on the recent conversation (no message from you)",
    "description_localizations": undefined,
    "name": "chime-in",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Character to chime in",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "description": "Anonymous by default (no persona/memories). Set False to use your persona + memories.",
        "description_localizations": undefined,
        "name": "incognito",
        "name_localizations": undefined,
        "required": false,
        "type": 5,
      },
    ],
    "type": 1,
  },
  {
    "description": "Open character settings dashboard (owner only)",
    "description_localizations": undefined,
    "name": "settings",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Character to manage",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Manage your personal overrides for a character",
    "description_localizations": undefined,
    "name": "overrides",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Character to override settings for",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > deny-command-options 1`] = `
[
  {
    "description": "Deny a user or server",
    "description_localizations": undefined,
    "name": "add",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Discord user or server ID",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "target",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "User",
            "name_localizations": undefined,
            "value": "USER",
          },
          {
            "name": "Server",
            "name_localizations": undefined,
            "value": "GUILD",
          },
        ],
        "description": "Entity type (default: User)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "type",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "Bot (bot-wide)",
            "name_localizations": undefined,
            "value": "BOT",
          },
          {
            "name": "Guild (this server)",
            "name_localizations": undefined,
            "value": "GUILD",
          },
          {
            "name": "Channel",
            "name_localizations": undefined,
            "value": "CHANNEL",
          },
          {
            "name": "Character",
            "name_localizations": undefined,
            "value": "PERSONALITY",
          },
        ],
        "description": "Denial scope (default: Bot)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "scope",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "channel_types": [
          0,
          2,
          15,
        ],
        "description": "Target channel (for Channel scope)",
        "description_localizations": undefined,
        "name": "channel",
        "name_localizations": undefined,
        "required": false,
        "type": 7,
      },
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Target character name (for Character scope)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Reason for the denial",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "reason",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "Block (full deny, default)",
            "name_localizations": undefined,
            "value": "BLOCK",
          },
          {
            "name": "Mute (ignore but keep in context)",
            "name_localizations": undefined,
            "value": "MUTE",
          },
        ],
        "description": "Denial mode (default: Block)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "mode",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Remove a denial",
    "description_localizations": undefined,
    "name": "remove",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Discord user or server ID",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "target",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "User",
            "name_localizations": undefined,
            "value": "USER",
          },
          {
            "name": "Server",
            "name_localizations": undefined,
            "value": "GUILD",
          },
        ],
        "description": "Entity type (default: User)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "type",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "Bot (bot-wide)",
            "name_localizations": undefined,
            "value": "BOT",
          },
          {
            "name": "Guild (this server)",
            "name_localizations": undefined,
            "value": "GUILD",
          },
          {
            "name": "Channel",
            "name_localizations": undefined,
            "value": "CHANNEL",
          },
          {
            "name": "Character",
            "name_localizations": undefined,
            "value": "PERSONALITY",
          },
        ],
        "description": "Denial scope (default: Bot)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "scope",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "channel_types": [
          0,
          2,
          15,
        ],
        "description": "Target channel (for Channel scope)",
        "description_localizations": undefined,
        "name": "channel",
        "name_localizations": undefined,
        "required": false,
        "type": 7,
      },
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Target character name (for Character scope)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Browse denial entries (owner only)",
    "description_localizations": undefined,
    "name": "browse",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "All Types",
            "name_localizations": undefined,
            "value": "all",
          },
          {
            "name": "Users Only",
            "name_localizations": undefined,
            "value": "user",
          },
          {
            "name": "Servers Only",
            "name_localizations": undefined,
            "value": "guild",
          },
        ],
        "description": "Filter by entity type",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "filter",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Look up denial entries by Discord ID (owner only)",
    "description_localizations": undefined,
    "name": "view",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Discord user or server ID",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "target",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "User",
            "name_localizations": undefined,
            "value": "USER",
          },
          {
            "name": "Server",
            "name_localizations": undefined,
            "value": "GUILD",
          },
        ],
        "description": "Entity type filter",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "type",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > feedback-command-options 1`] = `
[
  {
    "autocomplete": undefined,
    "choices": undefined,
    "description": "Your feedback (bug reports, ideas, anything)",
    "description_localizations": undefined,
    "max_length": 2000,
    "min_length": undefined,
    "name": "message",
    "name_localizations": undefined,
    "required": true,
    "type": 3,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > help-command-options 1`] = `
[
  {
    "autocomplete": true,
    "choices": undefined,
    "description": "Get detailed help for a specific command",
    "description_localizations": undefined,
    "max_length": undefined,
    "min_length": undefined,
    "name": "command",
    "name_localizations": undefined,
    "required": false,
    "type": 3,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > history-command-options 1`] = `
[
  {
    "description": "Clear conversation context (soft reset)",
    "description_localizations": undefined,
    "name": "clear",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The character to clear history for",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The persona to use (defaults to your active persona)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "persona",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Restore previously cleared context",
    "description_localizations": undefined,
    "name": "undo",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The character to restore history for",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The persona to use (defaults to your active persona)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "persona",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "View conversation statistics",
    "description_localizations": undefined,
    "name": "stats",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The character to view stats for",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The persona to use (defaults to your active persona)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "persona",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "PERMANENTLY delete conversation history (cannot be undone!)",
    "description_localizations": undefined,
    "name": "hard-delete",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The character to delete history for",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > inspect-command-options 1`] = `
[
  {
    "autocomplete": undefined,
    "choices": undefined,
    "description": "Message ID, message link, or request UUID (omit to browse recent)",
    "description_localizations": undefined,
    "max_length": undefined,
    "min_length": undefined,
    "name": "identifier",
    "name_localizations": undefined,
    "required": false,
    "type": 3,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > memory-command-options 1`] = `
[
  {
    "description": "View memory statistics",
    "description_localizations": undefined,
    "name": "stats",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The character to view stats for",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Browse your memories with pagination",
    "description_localizations": undefined,
    "name": "browse",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Filter by character (optional)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Browse and correct the facts a character has learned about you",
    "description_localizations": undefined,
    "name": "facts",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The character whose facts to manage",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Search your memories semantically",
    "description_localizations": undefined,
    "name": "search",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "What to search for (natural language)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "query",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Filter by character (optional)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Number of results (1-10, default 5)",
        "description_localizations": undefined,
        "max_value": 10,
        "min_value": 1,
        "name": "limit",
        "name_localizations": undefined,
        "required": false,
        "type": 4,
      },
    ],
    "type": 1,
  },
  {
    "description": "Batch delete memories with filters (skips locked)",
    "description_localizations": undefined,
    "name": "delete",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The character to delete memories for",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "Last 24 hours",
            "name_localizations": undefined,
            "value": "24h",
          },
          {
            "name": "Last 7 days",
            "name_localizations": undefined,
            "value": "7d",
          },
          {
            "name": "Last 30 days",
            "name_localizations": undefined,
            "value": "30d",
          },
          {
            "name": "Last year",
            "name_localizations": undefined,
            "value": "1y",
          },
          {
            "name": "All time",
            "name_localizations": undefined,
            "value": "all",
          },
        ],
        "description": "Only delete memories from this time period (e.g., 7d, 30d, 1y)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "timeframe",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Delete ALL memories for a character (requires typed confirmation)",
    "description_localizations": undefined,
    "name": "purge",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The character to purge all memories for",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Manage focus mode (disable LTM retrieval)",
    "description_localizations": undefined,
    "name": "focus",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Enable focus mode - stop retrieving long-term memories",
        "description_localizations": undefined,
        "name": "enable",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The character to enable focus mode for",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Disable focus mode - resume retrieving long-term memories",
        "description_localizations": undefined,
        "name": "disable",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The character to disable focus mode for",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Check current focus mode status",
        "description_localizations": undefined,
        "name": "status",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The character to check status for",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
    ],
    "type": 2,
  },
  {
    "description": "Manage incognito mode (disable memory saving)",
    "description_localizations": undefined,
    "name": "incognito",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Enable incognito mode - new memories will NOT be saved",
        "description_localizations": undefined,
        "name": "enable",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "Character or "all" for global incognito",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "30 minutes",
                "name_localizations": undefined,
                "value": "30m",
              },
              {
                "name": "1 hour",
                "name_localizations": undefined,
                "value": "1h",
              },
              {
                "name": "4 hours",
                "name_localizations": undefined,
                "value": "4h",
              },
              {
                "name": "Until manually disabled",
                "name_localizations": undefined,
                "value": "forever",
              },
            ],
            "description": "How long to stay in incognito mode",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "duration",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Disable incognito mode - resume saving memories",
        "description_localizations": undefined,
        "name": "disable",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "Character or "all" to disable global incognito",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Check current incognito mode status",
        "description_localizations": undefined,
        "name": "status",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
      {
        "description": "Retroactively delete recent memories",
        "description_localizations": undefined,
        "name": "forget",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "Character or "all" for all characters",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "Last 5 minutes",
                "name_localizations": undefined,
                "value": "5m",
              },
              {
                "name": "Last 15 minutes",
                "name_localizations": undefined,
                "value": "15m",
              },
              {
                "name": "Last hour",
                "name_localizations": undefined,
                "value": "1h",
              },
            ],
            "description": "How far back to delete memories",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "timeframe",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
    ],
    "type": 2,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > models-command-options 1`] = `
[
  {
    "description": "Browse available models, filtered by capability or name",
    "description_localizations": undefined,
    "name": "browse",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Search by model name or ID",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "query",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "Vision",
            "name_localizations": undefined,
            "value": "vision",
          },
          {
            "name": "Image generation",
            "name_localizations": undefined,
            "value": "image-gen",
          },
          {
            "name": "Text only",
            "name_localizations": undefined,
            "value": "text",
          },
        ],
        "description": "Filter by capability",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "capability",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "View the detail card for a specific model",
    "description_localizations": undefined,
    "name": "view",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Model name or ID",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "model",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > notifications-command-options 1`] = `
[
  {
    "description": "Show your notification settings",
    "description_localizations": undefined,
    "name": "view",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Enable release-notes DMs",
    "description_localizations": undefined,
    "name": "enable",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Disable release-notes DMs",
    "description_localizations": undefined,
    "name": "disable",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Delete release-notes DMs from your DM channel",
    "description_localizations": undefined,
    "name": "cleanup",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Set the minimum release weight worth a DM",
    "description_localizations": undefined,
    "name": "level",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "Major — breaking changes only",
            "name_localizations": undefined,
            "value": "major",
          },
          {
            "name": "Minor — features and breaking changes (default)",
            "name_localizations": undefined,
            "value": "minor",
          },
          {
            "name": "Patch — every release, including fix-only",
            "name_localizations": undefined,
            "value": "patch",
          },
        ],
        "description": "Releases below this weight are skipped",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "level",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > persona-command-options 1`] = `
[
  {
    "description": "View your current persona",
    "description_localizations": undefined,
    "name": "view",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Edit a persona (default: your default persona)",
    "description_localizations": undefined,
    "name": "edit",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Which persona to edit (optional, defaults to your default)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "persona",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Create a new persona",
    "description_localizations": undefined,
    "name": "create",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Browse all your personas",
    "description_localizations": undefined,
    "name": "browse",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Set a persona as your default",
    "description_localizations": undefined,
    "name": "default",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The persona to set as default",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "persona",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Set different personas for specific characters",
    "description_localizations": undefined,
    "name": "override",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Set a different persona for a specific character",
        "description_localizations": undefined,
        "name": "set",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The character to override",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The persona to use (or create new)",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "persona",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Clear persona override for a specific character",
        "description_localizations": undefined,
        "name": "clear",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The character to clear override for",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
    ],
    "type": 2,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > preset-command-options 1`] = `
[
  {
    "description": "Browse and search model presets",
    "description_localizations": undefined,
    "name": "browse",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": undefined,
        "choices": undefined,
        "description": "Search by name or model",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "query",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "All Presets",
            "name_localizations": undefined,
            "value": "all",
          },
          {
            "name": "Global Only",
            "name_localizations": undefined,
            "value": "global",
          },
          {
            "name": "My Presets",
            "name_localizations": undefined,
            "value": "mine",
          },
          {
            "name": "Free Models",
            "name_localizations": undefined,
            "value": "free",
          },
        ],
        "description": "Filter presets by scope",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "filter",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "All Models",
            "name_localizations": undefined,
            "value": "all",
          },
          {
            "name": "Text-only",
            "name_localizations": undefined,
            "value": "text",
          },
          {
            "name": "Vision-capable",
            "name_localizations": undefined,
            "value": "vision",
          },
        ],
        "description": "Filter by capability (default: all)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "capability",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Create a new model preset",
    "description_localizations": undefined,
    "name": "create",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Edit one of your model presets",
    "description_localizations": undefined,
    "name": "edit",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Preset to edit",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "preset",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Export a preset as JSON file",
    "description_localizations": undefined,
    "name": "export",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Preset to export",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "preset",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Import a preset from JSON file",
    "description_localizations": undefined,
    "name": "import",
    "name_localizations": undefined,
    "options": [
      {
        "description": "JSON file to import",
        "description_localizations": undefined,
        "name": "file",
        "name_localizations": undefined,
        "required": true,
        "type": 11,
      },
    ],
    "type": 1,
  },
  {
    "description": "Download a JSON template for preset import",
    "description_localizations": undefined,
    "name": "template",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Manage global presets (Owner only)",
    "description_localizations": undefined,
    "name": "global",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Set a global preset as the system default (Owner only)",
        "description_localizations": undefined,
        "name": "default",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "Global preset to set as default",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "preset",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "Chat",
                "name_localizations": undefined,
                "value": "text",
              },
              {
                "name": "Vision",
                "name_localizations": undefined,
                "value": "vision",
              },
            ],
            "description": "Which slot to target: Chat (default) or Vision",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "slot",
            "name_localizations": undefined,
            "required": false,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Set a global preset as the free tier default (Owner only)",
        "description_localizations": undefined,
        "name": "free-default",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "Global preset to set as free tier default",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "preset",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "Chat",
                "name_localizations": undefined,
                "value": "text",
              },
              {
                "name": "Vision",
                "name_localizations": undefined,
                "value": "vision",
              },
            ],
            "description": "Which slot to target: Chat (default) or Vision",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "slot",
            "name_localizations": undefined,
            "required": false,
            "type": 3,
          },
        ],
        "type": 1,
      },
    ],
    "type": 2,
  },
  {
    "description": "Per-character preset overrides and your default preset",
    "description_localizations": undefined,
    "name": "override",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Browse your preset overrides (select to clear)",
        "description_localizations": undefined,
        "name": "browse",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
      {
        "description": "Override preset for a character",
        "description_localizations": undefined,
        "name": "set",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The character to override",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The preset to use",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "preset",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "Chat",
                "name_localizations": undefined,
                "value": "text",
              },
              {
                "name": "Vision",
                "name_localizations": undefined,
                "value": "vision",
              },
            ],
            "description": "Which slot to target: Chat (default) or Vision",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "slot",
            "name_localizations": undefined,
            "required": false,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Remove preset override for a character",
        "description_localizations": undefined,
        "name": "clear",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The character to clear",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "Chat",
                "name_localizations": undefined,
                "value": "text",
              },
              {
                "name": "Vision",
                "name_localizations": undefined,
                "value": "vision",
              },
            ],
            "description": "Which slot to target: Chat (default) or Vision",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "slot",
            "name_localizations": undefined,
            "required": false,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Set your global default preset",
        "description_localizations": undefined,
        "name": "set-default",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The preset to use as default",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "preset",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "Chat",
                "name_localizations": undefined,
                "value": "text",
              },
              {
                "name": "Vision",
                "name_localizations": undefined,
                "value": "vision",
              },
            ],
            "description": "Which slot to target: Chat (default) or Vision",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "slot",
            "name_localizations": undefined,
            "required": false,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Clear your global default preset",
        "description_localizations": undefined,
        "name": "clear-default",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "Chat",
                "name_localizations": undefined,
                "value": "text",
              },
              {
                "name": "Vision",
                "name_localizations": undefined,
                "value": "vision",
              },
            ],
            "description": "Which slot to target: Chat (default) or Vision",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "slot",
            "name_localizations": undefined,
            "required": false,
            "type": 3,
          },
        ],
        "type": 1,
      },
    ],
    "type": 2,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > settings-command-options 1`] = `
[
  {
    "description": "Manage your timezone settings",
    "description_localizations": undefined,
    "name": "timezone",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Set your timezone",
        "description_localizations": undefined,
        "name": "set",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "Your timezone (e.g., America/New_York)",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "timezone",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Show your current timezone",
        "description_localizations": undefined,
        "name": "get",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
    ],
    "type": 2,
  },
  {
    "description": "Manage your API keys (BYOK - Bring Your Own Key)",
    "description_localizations": undefined,
    "name": "apikey",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Set your API key for a provider",
        "description_localizations": undefined,
        "name": "set",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "OpenRouter",
                "name_localizations": undefined,
                "value": "openrouter",
              },
              {
                "name": "ElevenLabs (Voice)",
                "name_localizations": undefined,
                "value": "elevenlabs",
              },
              {
                "name": "Z.AI Coding Plan",
                "name_localizations": undefined,
                "value": "zai-coding",
              },
              {
                "name": "Mistral (Voxtral TTS/STT)",
                "name_localizations": undefined,
                "value": "mistral",
              },
            ],
            "description": "AI provider to configure",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "provider",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Browse your configured API keys",
        "description_localizations": undefined,
        "name": "browse",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
      {
        "description": "Remove your API key for a provider",
        "description_localizations": undefined,
        "name": "remove",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "OpenRouter",
                "name_localizations": undefined,
                "value": "openrouter",
              },
              {
                "name": "ElevenLabs (Voice)",
                "name_localizations": undefined,
                "value": "elevenlabs",
              },
              {
                "name": "Z.AI Coding Plan",
                "name_localizations": undefined,
                "value": "zai-coding",
              },
              {
                "name": "Mistral (Voxtral TTS/STT)",
                "name_localizations": undefined,
                "value": "mistral",
              },
            ],
            "description": "AI provider to remove",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "provider",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Test your API key validity",
        "description_localizations": undefined,
        "name": "test",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "OpenRouter",
                "name_localizations": undefined,
                "value": "openrouter",
              },
              {
                "name": "ElevenLabs (Voice)",
                "name_localizations": undefined,
                "value": "elevenlabs",
              },
              {
                "name": "Z.AI Coding Plan",
                "name_localizations": undefined,
                "value": "zai-coding",
              },
              {
                "name": "Mistral (Voxtral TTS/STT)",
                "name_localizations": undefined,
                "value": "mistral",
              },
            ],
            "description": "AI provider to test",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "provider",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
    ],
    "type": 2,
  },
  {
    "description": "Manage your global default settings",
    "description_localizations": undefined,
    "name": "defaults",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Open your default settings dashboard",
        "description_localizations": undefined,
        "name": "edit",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
    ],
    "type": 2,
  },
  {
    "description": "Your data: export everything, or delete your account",
    "description_localizations": undefined,
    "name": "data",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Export all your account data as a downloadable file",
        "description_localizations": undefined,
        "name": "export",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
      {
        "description": "Permanently delete your account and ALL your data",
        "description_localizations": undefined,
        "name": "delete",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
    ],
    "type": 2,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > shapes-command-options 1`] = `
[
  {
    "description": "Authenticate with your shapes.inc session cookie",
    "description_localizations": undefined,
    "name": "auth",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Remove your stored shapes.inc credentials",
    "description_localizations": undefined,
    "name": "logout",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Browse your owned shapes.inc characters",
    "description_localizations": undefined,
    "name": "browse",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
  {
    "description": "Import a shapes.inc character into Tzurot",
    "description_localizations": undefined,
    "name": "import",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The shapes.inc character username/slug",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "slug",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "Full Character",
            "name_localizations": undefined,
            "value": "full",
          },
          {
            "name": "Memory Only",
            "name_localizations": undefined,
            "value": "memory_only",
          },
        ],
        "description": "Import type (default: full)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "import_type",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Export a shapes.inc character data",
    "description_localizations": undefined,
    "name": "export",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "The shapes.inc character username/slug",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "slug",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
      {
        "autocomplete": undefined,
        "choices": [
          {
            "name": "JSON",
            "name_localizations": undefined,
            "value": "json",
          },
          {
            "name": "Markdown",
            "name_localizations": undefined,
            "value": "markdown",
          },
        ],
        "description": "Export format (default: json)",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "format",
        "name_localizations": undefined,
        "required": false,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "View credential status and import history",
    "description_localizations": undefined,
    "name": "status",
    "name_localizations": undefined,
    "options": [],
    "type": 1,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > has a stable option structure for every registered command > voice-command-options 1`] = `
[
  {
    "description": "Show resolved TTS + STT + voices for a character",
    "description_localizations": undefined,
    "name": "view",
    "name_localizations": undefined,
    "options": [
      {
        "autocomplete": true,
        "choices": undefined,
        "description": "Which character to inspect",
        "description_localizations": undefined,
        "max_length": undefined,
        "min_length": undefined,
        "name": "character",
        "name_localizations": undefined,
        "required": true,
        "type": 3,
      },
    ],
    "type": 1,
  },
  {
    "description": "Manage TTS configuration overrides",
    "description_localizations": undefined,
    "name": "tts",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Browse your TTS overrides (select to clear)",
        "description_localizations": undefined,
        "name": "browse",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
      {
        "description": "Override TTS config for a character",
        "description_localizations": undefined,
        "name": "set",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The character to override",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The TTS config to use",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "tts",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Remove TTS config override for a character",
        "description_localizations": undefined,
        "name": "clear",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The character to clear",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "character",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Set your global default TTS config",
        "description_localizations": undefined,
        "name": "set-default",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The TTS config to use as default",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "tts",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Clear your global default TTS config",
        "description_localizations": undefined,
        "name": "clear-default",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
    ],
    "type": 2,
  },
  {
    "description": "Choose who transcribes your voice messages",
    "description_localizations": undefined,
    "name": "stt",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Pick a provider to transcribe your voice messages",
        "description_localizations": undefined,
        "name": "set",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": undefined,
            "choices": [
              {
                "name": "Mistral",
                "name_localizations": undefined,
                "value": "mistral",
              },
              {
                "name": "ElevenLabs",
                "name_localizations": undefined,
                "value": "elevenlabs",
              },
              {
                "name": "Self-hosted (Parakeet TDT)",
                "name_localizations": undefined,
                "value": "voice-engine",
              },
            ],
            "description": "Which provider to transcribe with",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "provider",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Remove your transcription provider preference",
        "description_localizations": undefined,
        "name": "clear",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
    ],
    "type": 2,
  },
  {
    "description": "Manage your ElevenLabs cloned voices",
    "description_localizations": undefined,
    "name": "voices",
    "name_localizations": undefined,
    "options": [
      {
        "description": "Browse your cloned voices",
        "description_localizations": undefined,
        "name": "browse",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
      {
        "description": "Delete a single cloned voice",
        "description_localizations": undefined,
        "name": "delete",
        "name_localizations": undefined,
        "options": [
          {
            "autocomplete": true,
            "choices": undefined,
            "description": "The voice to delete",
            "description_localizations": undefined,
            "max_length": undefined,
            "min_length": undefined,
            "name": "voice",
            "name_localizations": undefined,
            "required": true,
            "type": 3,
          },
        ],
        "type": 1,
      },
      {
        "description": "Delete all Tzurot cloned voices",
        "description_localizations": undefined,
        "name": "clear",
        "name_localizations": undefined,
        "options": [],
        "type": 1,
      },
    ],
    "type": 2,
  },
]
`;

exports[`CommandHandler (component) > command structure snapshots > registers a stable set of command names (guards against silent drops) > registered-command-names 1`] = `
[
  "admin",
  "channel",
  "character",
  "deny",
  "feedback",
  "help",
  "history",
  "inspect",
  "memory",
  "models",
  "notifications",
  "persona",
  "preset",
  "settings",
  "shapes",
  "voice",
]
`;
